tests/valid/assign/assign_through_nested_ref.facet
fn nested_assign(mut x: unrestricted isize) -> unrestricted () {
    let mut r = (&mut x) in
    let mut rr = (&mut r) in
    (**rr = 42)
}
