tests/invalid/reborrow/nested_deref_while_mut_reborrowed.facet
fn bad(mut x: unrestricted isize) -> unrestricted isize {
    let mut r: unrestricted &mut unrestricted isize = (&mut x) in
    let mut rr: unrestricted &mut unrestricted &mut unrestricted isize = (&mut r) in
    let child: unrestricted &mut unrestricted isize = (&mut **rr) in
    (*(*rr))
}
